Shenandoah: ShenandoahEvacInfo event does not follow JFR guidelines

XMLWordPrintable

    • gc

      The ShenandoahEvacInfo event is failing the style-guide tests for events. Specifically,
      ```
       make test TEST="jdk/jfr/event/metadata/TestLookForUntestedEvents.java" CONF=fast
      ```
      And possibly others in that suite.

            Assignee:
            Satyen Subramaniam
            Reporter:
            William Kemper
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: