8343649: Shenandoah: ShenandoahEvacInfo event does not follow JFR guidelines

Reviewed-by: wkemper